refactors js -> static/js/render.js, adds ui elements for graph selections

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,14 @@
 <html lang="en-US">
 <head>
     <title>VisFromAPI</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/colors.css') }}">
     <link rel="icon" href="/static/images/favicon.ico">
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.8.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.0.0"></script>
+    <script src="{{ url_for('static', filename='js/render.js') }}"></script>
 </head>
 <body>
 <section>
@@ -17,32 +23,46 @@
     </nav>
     <article>
         <h2>Altair Graph via External API</h2>
-        <div id="chart">
-            <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-            <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.8.1"></script>
-            <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.0.0"></script>
-            <div id="graph"></div>
-            <script type="text/javascript">
-                fetch("http://127.0.0.1:8000/graph", {
-                    method: "POST",
-                    headers: {"Content-Type": "application/json"},
-                    body: JSON.stringify({
-                        x_axis: "health",
-                        y_axis: "energy",
-                        target: "rarity",
-                    })
-                })
-                    .then(function (response) {
-                        return response.json();
-                    })
-                    .then(function (data) {
-                        vegaEmbed("#graph", data);
-                    })
-                    .catch(function (err) {
-                        console.warn("Something went wrong.", err);
-                    });
-            </script>
-        </div>
+        <form method="post" action="{{ url_for('home') }}">
+            <p><label>X-axis:
+                <select name="x_axis" id="x_axis">
+                    {% for op in options %}
+                        {% if op == x_axis %}
+                            <option selected="selected">{{ op }}</option>
+                        {% else %}
+                            <option>{{ op }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </label></p>
+            <p><label>Y-axis:
+                <select name="y_axis" id="y_axis">
+                    {% for op in options %}
+                        {% if op == y_axis %}
+                            <option selected="selected">{{ op }}</option>
+                        {% else %}
+                            <option>{{ op }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </label></p>
+            <p><label>Target:
+                <select name="target" id="target">
+                    {% for op in options %}
+                        {% if op == target %}
+                            <option selected="selected">{{ op }}</option>
+                        {% else %}
+                            <option>{{ op }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </label></p>
+            <button type="submit" id="submit" name="submit">
+                Generate Chart
+            </button>
+            <br class="clear">
+        </form>
+        <div id="altair-graph"></div>
     </article>
     <footer><p>© 2022 Bloom Institute of Technology</p></footer>
 </section>
