--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,53 +1,5 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-body {
-    line-height:1.4;
-}
-
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
-}
-
-nav ul {
-    list-style:none;
-    display: flex;
-}
-
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-:root {
-    color-scheme: dark;
-}
-
 body {
     margin-bottom: 60px;
-    background-color: #2b2b2b;
 }
 
 p {
@@ -56,22 +8,12 @@ p {
     margin: 20px 100px;
     line-height: 1.5em;
     text-align: left;
-    color: #aaaaaa;
-}
-
-strong, b {
-    color: #cca76e;
-}
-
-em, i {
-    color: #cca76e;
 }
 
 a, a:link, a:visited {
     font-family: Monaco, sans-serif;
     cursor: pointer;
     text-decoration: underline;
-    color: #8888c6;
 }
 
 a:active, a:hover {
@@ -81,16 +23,12 @@ a:active, a:hover {
 nav {
     margin: 20px 0;
     padding: 10px 60px;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
-    background-color: #252525;
 }
 
 nav a, nav a:link, nav a:active, nav a:visited {
     margin-right: 30px;
     text-decoration: none;
     text-transform: uppercase;
-    color: #aaaaaa;
 }
 
 nav a:hover {
@@ -101,7 +39,6 @@ h1, h2, h3, h4, h5 {
     margin: 20px 100px;
     font-family: Monaco, sans-serif;
     line-height: 1.55em;
-    color: #aaaaaa;
 }
 
 h1 {
@@ -130,15 +67,40 @@ header h1 {
     white-space: nowrap;
 }
 
-header h1 a:link, header h1 a:active,
-header h1 a:visited, header h1 a:hover {
+header h1 a:link, header h1 a:active, header h1 a:visited, header h1 a:hover {
     font-family: Arial, sans-serif;
     text-decoration: none;
-    color: #cca76e;
+}
+
+blockquote {
+    margin: 40px 100px;
+    padding: 20px;
+    width: 768px;
+}
+
+blockquote p {
+    font-size: 1em;
+    font-family: Monaco, sans-serif;
+    margin: 0 0 1.4em;
+}
+
+blockquote cite {
+    font-style: italic;
+    display: block;
+    text-align: right;
+    width: 98%;
+    font-weight: bold;
+    font-size: 1.1em;
+}
+
+blockquote cite:before {
+    content: "~ ";
+    font-weight: bold;
+    font-size: 1.1em;
 }
 
 article {
-    margin: 60px 0;
+    margin-bottom: 100px;
 }
 
 article h1 {
@@ -146,30 +108,118 @@ article h1 {
     font-size: 2em;
 }
 
+article ul {
+    margin: 0 0 20px 0;
+}
+
+article ol {
+    margin: 0 0 20px 10px;
+}
+
+article li {
+    font-family: Monaco, sans-serif;
+    font-size: 1em;
+    margin: 3px 120px;
+}
+
 footer {
     position: fixed;
     width: 100%;
     height: 40px;
     bottom: 0;
-    background-color: #252525;
-    border-top: 1px solid #000;
 }
 
 footer p {
     font-family: Monaco, sans-serif;
     font-size: .9em;
     margin: 10px 60px;
-    text-align: right;
-    color: #777777;
 }
 
-#chart {
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.clear {
+    clear: both;
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+h2.subhead {
+    margin-bottom: 20px;
+}
+
+form {
+    width: 380px;
+    margin: 0 40px 40px 100px;
+}
+
+form p {
+    margin: 0 0 15px;
+}
+
+form input {
+    width: 140px;
+    margin: 3px 20px 0 5px;
+    cursor: text;
+    padding: 0 10px;
+    float: right;
+}
+
+form select {
+    width: 164px;
+    margin: 3px 20px 0 5px;
+    cursor: pointer;
+    padding: 0 8px;
+    float: right;
+}
+
+button {
+    padding: 3px 0;
+    width: 167px;
+    cursor: pointer;
+    margin-right: 19px;
+    margin-top: 2px;
+    border-radius: 3px;
+    float: none;
+}
+
+form button#submit {
+    float: right;
+}
+
+form textarea {
+    margin: 20px 0 40px 100px;
+    width: 500px;
+    height: 200px;
+}
+
+article table {
+    font-size: 13px;
+    text-align: left;
+    margin: 40px 0 0 82px;
+}
+
+article table th {
+    padding: 5px 20px 5px 20px;
+    text-align: left;
+    font-size: 16px;
+}
+
+article table td {
+    padding: 5px 20px 5px 20px;
+    font-size: 14px;
+}
+
+#altair-graph {
     margin: 0 0 20px 100px;
-}
-
-#graph canvas {
-    border: 1px solid #000;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .vega-embed summary {
