--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,12 @@
 <html lang="en-US">
 <head>
     <title>VisFromAPI</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/colors.css') }}">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='css/colors.css') }}">
     <link rel="icon" href="/static/images/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.17.0"></script>
@@ -13,13 +16,13 @@
 <body>
 <section>
     <header>
-        <h1><a href="/">VisFromAPI v0.1.1</a></h1>
+        <h1><a id="api-version" href="/">VisFromAPI v</a></h1>
     </header>
     <nav>
         <ul>
-            <li><a href="{{ url_for('scatter')}}">Scatter Plot</a></li>
-            <li><a href="{{ url_for('bar')}}">Bar Graph</a></li>
-            <li><a href="{{ url_for('pie')}}">Pie Chart</a></li>
+            <li><a href="{{ url_for('scatter') }}">Scatter Plot</a></li>
+            <li><a href="{{ url_for('bar') }}">Bar Graph</a></li>
+            <li><a href="{{ url_for('pie') }}">Pie Chart</a></li>
         </ul>
     </nav>
     <article>
@@ -27,5 +30,16 @@
         {% endblock %}
     </article>
 </section>
+<footer><p class="right">© 2022 Bloom Institute of Technology</p></footer>
+<script>
+    fetch("http://127.0.0.1:8000/version")
+        .then((response) => response.json())
+        .then((data) => {
+            let target = document.getElementById("api-version");
+            const text = document.createTextNode(data);
+            target.appendChild(text);
+        })
+        .catch((err) => console.warn("Something went wrong!", err));
+</script>
 </body>
 </html>
