--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
 </section>
 <footer><p class="right">© 2022 Bloom Institute of Technology</p></footer>
 <script>
-    fetch("http://127.0.0.1:8000/version")
+    fetch("http://altairapi-dev.us-east-1.elasticbeanstalk.com/version")
         .then((response) => response.json())
         .then((data) => {
             let target = document.getElementById("api-version");
